# manipulation-day-3

./: LICENSE  README.md
day_3/: README.md
day_3/docs/: teach_pendant.md  ur.md
day_3/exercise_1/: README.md
day_3/exercise_1/supplementary_packages/universal-robot-resources/: README.md  moveit2.repos  ur_driver.repos
day_3/exercise_1/supplementary_packages/universal-robot-resources/docs/: moveit_integration.md  setup.md
day_3/exercise_1/supplementary_packages/universal-robot-resources/ur_config_utils/: CMakeLists.txt  package.xml
day_3/exercise_1/supplementary_packages/universal-robot-resources/ur_config_utils/config/ur10e/: joint_limits.yaml
day_3/exercise_1/supplementary_packages/universal-robot-resources/ur_config_utils/config/ur5e/: default_kinematics.yaml
day_3/exercise_1/supplementary_packages/universal-robot-resources/ur_config_utils/launch/: ur_control.launch.py
day_3/exercise_1/supplementary_packages/universal-robot-resources/ur_demo_description/: CMakeLists.txt  package.xml
day_3/exercise_1/supplementary_packages/universal-robot-resources/ur_demo_description/urdf/: spawn_ur_robot.xacro  ur.xacro  ur10.xacro  ur10e.xacro  ur16.xacro  ur16e.xacro  ur3.xacro  ur3e.xacro  ur5.xacro  ur5e.xacro
day_3/exercise_2/: README.md
day_3/exercise_2/supplementary_packages/robotiq_85_description/: CMakeLists.txt  package.xml
day_3/exercise_2/supplementary_packages/robotiq_85_description/urdf/: robotiq_85_coupler.urdf.xacro  robotiq_85_gripper.ros2_control.xacro  robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.xacro  spawn_gripper.xacro
day_3/exercise_2/ur_gripper_description/: CMakeLists.txt  package.xml
day_3/exercise_2/ur_gripper_description/config/: initial_positions.yaml
day_3/exercise_2/ur_gripper_description/urdf/: ur_gripper.xacro
day_3/exercise_3/: README.md
day_3/exercise_3/pick_and_place/: CMakeLists.txt  package.xml
day_3/exercise_3/pick_and_place/config/: config.yaml  ros2_controllers.yaml
day_3/exercise_3/pick_and_place/launch/: pick_and_place.launch.py  ur_bringup.launch.py
day_3/exercise_3/pick_and_place/src/: pick_and_place.cpp
day_3/exercise_4/: README.md
day_3/exercise_4/gripper_driver_interface/: CMakeLists.txt  package.xml
day_3/exercise_4/gripper_driver_interface/config/: config.yaml  controllers.yaml
day_3/exercise_4/gripper_driver_interface/launch/: gripper_bringup.launch.py
day_3/exercise_5/: README.md
day_3/exercise_5/robotiq_client/: CMakeLists.txt  package.xml
day_3/exercise_5/robotiq_client/launch/: robotiq_fake_service.launch.py
day_3/exercise_5/robotiq_client/src/: trigger_gripper.cpp
day_3/exercise_5/supplementary_packages/robotiq_driver/: README.md
day_3/exercise_5/supplementary_packages/robotiq_driver/robotiq_msgs/: CMakeLists.txt  package.xml
day_3/exercise_5/supplementary_packages/robotiq_driver/robotiq_msgs/msg/: CModelCommand.msg  CModelStatus.msg
day_3/exercise_5/supplementary_packages/robotiq_driver/robotiq_msgs/srv/: CModelResponse.srv
day_3/exercise_5/supplementary_packages/robotiq_driver/robotiq_urcap_control/: package.xml  setup.cfg  setup.py
day_3/exercise_5/supplementary_packages/robotiq_driver/robotiq_urcap_control/robotiq_urcap_control/: cmodel_urcap.py  cmodel_urcap_driver.py  robotiq_example_client.py
day_3/exercise_5/supplementary_packages/robotiq_driver/robotiq_urcap_felixvd/felixvd python urcap/: cmodel_urcap.py
day_3/exercise_5/supplementary_packages/robotiq_ros_service/: CMakeLists.txt  package.xml
day_3/exercise_5/supplementary_packages/robotiq_ros_service/config/: config.yaml
day_3/exercise_5/supplementary_packages/robotiq_ros_service/launch/: robotiq_ros_service.launch.py
day_3/exercise_5/supplementary_packages/robotiq_ros_service/src/: robotiq_ros2_server.cpp
day_3/exercise_6/: README.md
day_3/move_group_interface_example/: CMakeLists.txt  README.md  package.xml
day_3/move_group_interface_example/launch/: move_group_interface_tutorial.launch.py  ur_move_group.launch.py  ur_move_group.rviz  ur_move_group_interface_tutorial.launch.py
day_3/move_group_interface_example/src/: move_group_interface_tutorial.cpp
