<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotiq_msgs</name>
  <version>0.1.0</version>
  <description>The robotiq_msgs package</description>
  
  <maintainer email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</maintainer>
  <license>BSD</license>
  <author email="fsuarez.ruiz@pmail.ntu.edu.sg">Francisco Suarez Ruiz</author>
  <url type="website">https://github.com/crigroup/robotiq</url>
  <url type="bugtracker">https://github.com/crigroup/robotiq/issues</url>
  <url type="repository">https://github.com/crigroup/robotiq</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <depend>action_msgs</depend>
  <exec_depend>control_msgs</exec_depend>
    
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
